[package]
name = "rsr"
version = "0.5.4"
authors = ["Arthur Woimbée <arthur.woimbee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Useful for profiling, release builds should be stripped anyways:
[profile.release]
debug = true

[dependencies]
clap = "2.33"
regex = "1.5"
rayon = "1.5"
os_str_bytes = "4.2"

[dev-dependencies]
speculate = "0.1"
