[package]
name = "rsr"
description = "rsr, a tool to search & replace FAST."
version = "0.6.0"
authors = ["Arthur Woimbée <arthur.woimbee@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Useful for profiling, release builds should be stripped anyways:
[profile.release]
debug = true

[dependencies]
clap = { version = "4.1", features = ["cargo"] }
regex = "1.7"
rayon = "1.7"
os_str_bytes = "6.4"

[dev-dependencies]
